# LedgerOne-4

./: .gitignore  .replit  LICENSE  README.md  Requirements.txt  pyproject.toml  replit.md
ledger_streamlit/: .env.example  .gitignore  README.md  requirements.txt  streamlit_app.py
ledger_streamlit/data/audit/: 237afa00-93c9-40f3-95ad-8047628d4d1c_uploads.jsonl  8b467390-b334-47d5-b735-2d08850408ab_uploads.jsonl  ee1b571d-5517-4786-ac1e-934c467f576c_uploads.jsonl
ledger_streamlit/ledger/accounts/: manager.py
ledger_streamlit/ledger/approvals/: engine.py
ledger_streamlit/ledger/auth/: roles.py  session.py
ledger_streamlit/ledger/core/: audit.py  config.py  repositories.py  schemas.py  upload_manager.py  utils.py
ledger_streamlit/ledger/db/: models.py  session.py
ledger_streamlit/ledger/employees/: manager.py
ledger_streamlit/ledger/ingest/: engine.py  ocr.py  parser.py
ledger_streamlit/ledger/integrations/: connectors.py
ledger_streamlit/ledger/ledger/: posting.py
ledger_streamlit/ledger/ml/: anomaly.py  classifier.py  forecast.py  fraud.py  vendor_normalizer.py
ledger_streamlit/ledger/payroll/: bulk_processor.py  engine.py
ledger_streamlit/migrations/: README.md
ledger_streamlit/test_data/: employees.csv  vendors.csv
ledger_streamlit/tests/: test_approvals.py  test_engine.py  test_financials.py  test_forecast.py  test_fraud.py  test_ingest.py  test_integrations.py  test_ml.py  test_models.py  test_ocr.py  test_payroll.py  test_posting.py  test_reconcile.py  test_roles.py  test_utils.py  test_vendor_normalizer.py
(+7 files in other folders)
