[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fuzzywuzzy>=0.18.0",
    "joblib>=1.5.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "nbconvert>=7.16.6",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pdf2image>=1.17.0",
    "pillow>=11.3.0",
    "plotly>=6.3.0",
    "prophet>=1.1.7",
    "pydantic>=2.11.7",
    "pytesseract>=0.3.13",
    "pytest>=8.4.2",
    "python-levenshtein>=0.27.1",
    "requests>=2.32.5",
    "requests-mock>=1.12.1",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.49.1",
    "xgboost>=3.0.5",
    "xlrd>=2.0.2",
    "xlsxwriter>=3.2.5",
]
